...
                                            </stackView>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UKX-Ox-ASU">
                                        <rect key="frame" x="30" y="756" width="354" height="40.333333333333371"/>
                                        <color key="backgroundColor" red="1" green="0.41960784313725491" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="registerSignUp"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <variation key="heightClass=regular-widthClass=regular">
                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                        </variation>
                                        <connections>
...
                                    <constraint firstAttribute="trailing" secondItem="UKX-Ox-ASU" secondAttribute="trailing" constant="30" id="u4p-lE-6no"/>
                                    <constraint firstItem="UKX-Ox-ASU" firstAttribute="leading" secondItem="ilG-z0-XBu" secondAttribute="leading" constant="30" id="we1-2d-4zg"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="registerView"/>
                        <constraints>
                            <constraint firstItem="ilG-z0-XBu" firstAttribute="top" secondItem="WQG-qQ-13R" secondAttribute="top" id="LkR-m0-oWY"/>
                            <constraint firstAttribute="bottom" secondItem="ilG-z0-XBu" secondAttribute="bottom" id="bYf-di-oxu"/>
                            <constraint firstItem="ilG-z0-XBu" firstAttribute="leading" secondItem="WQG-qQ-13R" secondAttribute="leading" id="fxH-UR-4Rv"/>
                            <constraint firstItem="H4u-b9-ZuK" firstAttribute="height" secondItem="WQG-qQ-13R" secondAttribute="height" multiplier="0.4" id="gVZ-Cn-tsi"/>
                            <constraint firstAttribute="trailing" secondItem="ilG-z0-XBu" secondAttribute="trailing" id="jcW-9R-Zn7"/>
...
