...
                                    <constraint firstAttribute="trailing" secondItem="HmX-8n-74m" secondAttribute="trailing" constant="30" id="uUS-n4-AaD"/>
                                    <constraint firstItem="ZvD-zY-b04" firstAttribute="height" secondItem="r4l-pp-0vY" secondAttribute="height" multiplier="0.2" id="vD8-Xj-OVK"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="loginView"/>
                        <constraints>
                            <constraint firstItem="wQq-d3-wtB" firstAttribute="width" secondItem="ihN-hd-7rU" secondAttribute="width" multiplier="0.15" id="8s2-na-2Gl"/>
                            <constraint firstItem="r4l-pp-0vY" firstAttribute="leading" secondItem="m9M-8C-NMS" secondAttribute="leading" id="Fv3-7I-Bcg"/>
                            <constraint firstItem="oKr-Fz-PVN" firstAttribute="height" secondItem="ihN-hd-7rU" secondAttribute="height" multiplier="0.0369458" id="MYr-RO-ejE"/>
                            <constraint firstAttribute="bottom" secondItem="r4l-pp-0vY" secondAttribute="bottom" id="VQt-MU-CKC"/>
                            <constraint firstItem="r4l-pp-0vY" firstAttribute="top" secondItem="ihN-hd-7rU" secondAttribute="top" id="n6e-se-lUA"/>
...
